Added drag and drop. Embeded progress bar. Fixed several bugs