@@ -10,11 +10,11 @@ import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import javafx.geometry.Insets;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.input.MouseEvent;
+import javafx.scene.input.TransferMode;
 import javafx.scene.layout.*;
 import javafx.stage.Stage;
 
@@ -28,10 +28,9 @@ import java.nio.file.FileSystems;
 import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Hashtable;
+import java.util.List;
 import java.util.ResourceBundle;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -50,13 +49,13 @@ public class Controller implements Initializable{
     private ToggleGroup group;
 
     @FXML
-    private Spinner<?> frameRate;
+    private Spinner<Integer> frameRate;
 
     @FXML
-    private Spinner<?> height;
+    private Spinner<Integer> height;
 
     @FXML
-    private Spinner<?> width;
+    private Spinner<Integer> width;
 
     @FXML
     private JFXCheckBox presRatio;
@@ -64,22 +63,26 @@ public class Controller implements Initializable{
     @FXML
     private JFXCheckBox inputSetting;
 
+    @FXML
+    private ProgressBar bar;
 
     public TreeView<String> treeView;
     private String selected;
     private String ItemName;
     private HashSet<String> set;
     private HashMap<String, String> map;
+    private ObservableList<Data> list;
     @Override
     public void initialize(URL location, ResourceBundle resources) {
         map = new HashMap<>();
-        ObservableList<Data> list = FXCollections.observableArrayList();
+        list= FXCollections.observableArrayList();
         String name = "computer";
         try{
             name = InetAddress.getLocalHost().getHostName();
         }catch (Exception e){
 
         }
+        bar.prefWidthProperty().bind(bp.widthProperty());
         //Name Column
         TableColumn<Data, String> nameColumn = new TableColumn<>("FileName");
         nameColumn.setCellValueFactory(new PropertyValueFactory<>("name"));
@@ -97,6 +100,29 @@ public class Controller implements Initializable{
         TableView<Data> tableView = new TableView<>();
         tableView.setItems(list);
         tableView.getColumns().addAll(nameColumn, filePathC, formatColumn);
+        tableView.setOnMousePressed(e->{
+            if(e.isPrimaryButtonDown() && e.getClickCount()==2){
+                set.remove(tableView.getSelectionModel().getSelectedItem().getFullPath());
+                list.remove(tableView.getSelectionModel().getSelectedItem());
+            }
+        });
+        tableView.setOnDragOver(e->{
+            if(e.getDragboard().hasFiles()) {
+                e.acceptTransferModes(TransferMode.ANY);
+            }
+            e.consume();
+        });
+        tableView.setOnDragDropped(e->{
+            if(e.getDragboard().hasFiles()){
+                List<File> files = e.getDragboard().getFiles();
+                for(File f: files){
+                    if(f.isFile()){
+                        addFile(f.getName(), f.getPath());
+                    }
+                }
+            }
+            e.consume();
+        });
         bp.setCenter(tableView);
 
         set = new HashSet<>();
@@ -120,17 +146,11 @@ public class Controller implements Initializable{
                         String filePath = (getString(treeView.getSelectionModel().getSelectedItem()).replace(treeView.getRoot().getValue(), "").replaceAll("//", "").replaceAll("(\\\\)/", "$1"));
                         FilePath = filePath;
                         ItemName = treeView.getSelectionModel().getSelectedItem().getValue();
-                        System.out.println(ItemName);
                         Pattern p = Pattern.compile(".*(\\..*)");
                         Matcher m = p.matcher(ItemName);
                         String extension = null;
                         if(m.find()){
-                            extension = (ItemName.replaceAll(".*(\\..*)", "$1"));
-                            if(!set.contains(filePath)) {
-                                list.add(new Data(ItemName.replace(extension, ""), filePath, extension));
-                                map.put(filePath, ItemName);
-                                set.add(filePath);
-                            }
+                            addFile(ItemName, filePath);
                         }
 
                     }
@@ -145,6 +165,7 @@ public class Controller implements Initializable{
                 selected = (newT.toString().replaceAll(".*'(.*)'", "$1"));
             }
         });
+
         convertBut.setOnAction(new EventHandler<ActionEvent>() {
             @Override
             public void handle(ActionEvent actionEvent) {
@@ -153,7 +174,6 @@ public class Controller implements Initializable{
                         try {
                             FilePath = "\""  + FilePath + "\"";
                             //FilePath =FilePath.replace(ItemName, "");
-                            System.out.println(FilePath);
                             Process p = new ProcessBuilder("ffmpeg", "-i", FilePath).start();
                             BufferedReader b = new BufferedReader(new InputStreamReader(p.getErrorStream()));
                             String string = new String();
@@ -195,7 +215,7 @@ public class Controller implements Initializable{
                                 ItemName = map.get(FilePath);
                                 ItemName = ItemName.replace(extension, "");
                                 ItemName = ItemName + "1";
-                                ItemName = "\"" + ItemName + "\"";
+                                ItemName = "\"" + ItemName +  "." + selected + "\"";
                                 FilePath = "\"" + FilePath + "\"";
 
                                 Process p = new ProcessBuilder("cmd", "/c", "ffmpeg", "-i", FilePath).start();
@@ -212,23 +232,13 @@ public class Controller implements Initializable{
                                         break;
                                     }
                                 }
-
-                                Process d = Runtime.getRuntime().exec("cmd /c ffmpeg -i " + FilePath + " " + ItemName + "." + selected);
+                                Process d = new ProcessBuilder("cmd", "/c","ffmpeg", "-i", FilePath, ItemName).start();
                                 b = new BufferedReader(new InputStreamReader(d.getErrorStream()));
                                 pattern = Pattern.compile("time=(\\d\\d):(\\d\\d):(\\d\\d)\\.\\d\\d");
-                                ProgressBar progressBar = new ProgressBar();
-                                Stage stage = new Stage();
-                                stage.setScene(new Scene(progressBar));
-                                stage.show();
-                                Converter c = new Converter(b, pattern, matcher, duration.get(), progressBar, ItemName);
+                                Converter c = new Converter(b, pattern, matcher, duration.get(), bar, ItemName);
                                 Thread thread = new Thread(c);
                                 thread.start();
                                 convertBut.setDisable(true);
-                                stage.setOnCloseRequest(e -> {
-                                    c.setTrue(true);
-                                    d.destroy();
-                                    convertBut.setDisable(false);
-                                });
                             }
                             } catch(IOException e){
                                 e.printStackTrace();
@@ -241,7 +251,31 @@ public class Controller implements Initializable{
             }
         });
         bp.setLeft(treeView);
+        inputSetting.selectedProperty().addListener(new ChangeListener<Boolean>() {
+            @Override
+            public void changed(ObservableValue<? extends Boolean> observable, Boolean oldValue, Boolean newValue){
+                presRatio.setDisable(!presRatio.isDisable());
+                frameRate.setDisable(!frameRate.isDisable());
+                height.setDisable(!height.isDisable());
+                width.setDisable(!width.isDisable());
+            }
+        });
+
     }
+
+    private void addFile(String itemName, String filePath) {
+        String extension = (itemName.replaceAll(".*(\\..*)", "$1"));
+        System.out.println(filePath);
+        System.out.println(itemName);
+        System.out.println(extension);
+        if(!set.contains(filePath)) {
+            list.add(new Data(itemName.replace(extension, ""), filePath, extension));
+            map.put(filePath, itemName);
+            set.add(filePath);
+            ItemName = itemName;
+        }
+    }
+
     public String getString(TreeItem<String> treeView){
         if(treeView==null)
             return "";
